--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,19 @@ description = "suno session lab backend"
 readme = "spec.md"
 requires-python = ">=3.12"
 dependencies = [
-  "fastapi>=0.103,<0.110",
+  "fastapi>=0.115,<0.120",
   "uvicorn>=0.23,<0.31",
-  "pydantic>=1.10,<2.0",
+  "pydantic>=2.8,<3.0",
+  "pydantic-settings>=2.0,<3.0",
   "httpx>=0.25,<0.28",
 ]
 
 [project.optional-dependencies]
+dev = [
+  "pytest>=7.4,<9.0",
+]
+
+[dependency-groups]
 dev = [
   "pytest>=7.4,<9.0",
 ]
