--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "pydantic>=2.8,<3.0",
   "pydantic-settings>=2.0,<3.0",
   "httpx>=0.25,<0.28",
+  "requests>=2.31,<3.0",
 ]
 
 [project.optional-dependencies]
