--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
   "pydantic-settings>=2.0,<3.0",
   "httpx>=0.25,<0.28",
   "requests>=2.31,<3.0",
+  "transformers>=4.39,<5.0",
+  "torch>=2.2,<2.3",
+  "torchaudio>=2.2,<2.3",
 ]
 
 [project.optional-dependencies]
