--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,11 @@ dependencies = [
   "pydantic-settings>=2.0,<3.0",
   "httpx>=0.25,<0.28",
   "requests>=2.31,<3.0",
+  "google-genai>=0.3.0",
   "transformers>=4.39,<5.0",
-  "torch>=2.2,<2.3",
-  "torchaudio>=2.2,<2.3",
+  "torch>=2.5,<3.0",
+  "torchaudio>=2.5,<3.0",
+  "scikit-learn>=1.4,<2.0",
 ]
 
 [project.optional-dependencies]
