--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "suno-demo"
 version = "0.1.0"
 description = "suno session lab backend"
-readme = "spec.md"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.115,<0.120",
